--- a/themes/raiser/sass/components/_forms.scss
+++ b/themes/raiser/sass/components/_forms.scss
@@ -49,6 +49,11 @@
   padding: 0.6em 1em;
 }
 
+#user-pass {
+  #edit-submit {
+    padding: 0.8em 1em; 
+  }
+}
 
 form[id^="redhen-campaign-page-add-form"],
 form[id^="redhen-campaign-campaign-form"],
